--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -1,27 +1,179 @@
-.card {
+.tinder {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
   position: relative;
-  width: 400px;
-  padding: 20px;
-  max-width: 85vw;
-  height: 50vh;
-  border-radius: 10px;
-  background-position: center;
-  background-size: cover;
+  /* opacity: 0; */
+  transition: opacity 0.1s ease-in-out;
 }
 
-.card h3 {
-  color: #fff;
+.loaded.tinder {
+  opacity: 1;
+}
+
+.tinder--status {
   position: absolute;
-  bottom: 0;
-  margin: 10px;
+  top: 50%;
+  margin-top: -30px;
+  z-index: 2;
+  width: 100%;
+  text-align: center;
+  pointer-events: none;
 }
 
-.tinderCard_container {
+.tinder--status i {
+  font-size: 100px;
+  opacity: 0;
+  transform: scale(0.3);
+  transition: all 0.2s ease-in-out;
+  position: absolute;
+  width: 100px;
+  margin-left: -50px;
+}
+
+.tinder_love .fa-heart {
+  opacity: 0.7;
+  transform: scale(1);
+}
+
+.tinder_nope .fa-remove {
+  opacity: 0.7;
+  transform: scale(1);
+}
+
+.tinder--cards {
+  flex-grow: 1;
+  padding-top: 40px;
+  text-align: center;
   display: flex;
   justify-content: center;
-  margin-top: 10vh;
+  align-items: flex-end;
+  z-index: 1;
 }
 
-.swipe {
+.tinder--card {
+  display: inline-block;
+  width: 90vw;
+  max-width: 400px;
+  height: 70vh;
+  background: #FFFFFF;
+  padding-bottom: 40px;
+  border-radius: 8px;
+  overflow: hidden;
   position: absolute;
+  will-change: transform;
+  transition: all 0.3s ease-in-out;
+  cursor: -webkit-grab;
+  cursor: -moz-grab;
+  cursor: grab;
+  border: 1px solid rgb(240, 230, 230);
+}
+
+.moving.tinder--card {
+  transition: none;
+  cursor: -webkit-grabbing;
+  cursor: -moz-grabbing;
+  cursor: grabbing;
+}
+
+.tinder--card img {
+  max-width: 100%;
+  pointer-events: none;
+}
+
+.tinder--card h3 {
+  margin-top: 32px;
+  font-size: 32px;
+  padding: 0 16px;
+  pointer-events: none;
+}
+
+.tinder--card p {
+  margin-top: 24px;
+  font-size: 20px;
+  padding: 0 16px;
+  pointer-events: none;
+}
+
+.tinder--buttons {
+  flex: 0 0 100px;
+  text-align: center;
+  padding-top: 20px;
+  /* border: 1px solid rgb(240, 230, 230); */
+}
+
+.tinder--buttons button {
+  border-radius: 50%;
+  line-height: 60px;
+  width: 60px;
+  border: 0;
+  background: #FFFFFF;
+  display: inline-block;
+  margin: 0 8px;
+}
+
+.tinder--buttons button:focus {
+  outline: 0;
+}
+
+.tinder--buttons i {
+  font-size: 32px;
+  vertical-align: middle;
+}
+
+
+
+.bgcImg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 400px;
+  width: 400px;
+
+}
+
+
+
+
+
+/* /////////////////////////////// */
+.fa-heart {
+  color: #FFACE4;
+  font-size: 32px;
+
+}
+
+.fa-remove {
+  color: #CDD6DD;
+  font-size: 32px;
+
+}
+
+.remove {
+  display: flex;
+  text-align: center;
+  padding-top: 20px;
+  cursor: pointer;
+  border-radius: 50%;
+  line-height: 40px;
+  width: 55px;
+  border: 0;
+  background: #f5f0f0;
+  display: inline-block;
+  margin: 0 8px;
+}
+
+.heart {
+  display: flex;
+  text-align: center;
+  padding-top: 20px;
+  cursor: pointer;
+  border-radius: 50%;
+  line-height: 40px;
+  width: 55px;
+  border: 0;
+  background: #f5f0f0;
+  display: inline-block;
+  margin: 0 8px;
 }
