--- a/src/css/Filter.css
+++ b/src/css/Filter.css
@@ -1,5 +1,7 @@
 h1 {
   text-align: center;
+  margin-top: 50px;
+
 }
 
 .cities {
@@ -31,17 +33,13 @@ h1 {
   flex-wrap: wrap;
   align-content: space-around;
   flex-direction: column;
-
-
-
-
-
+  background-color: rgb(32, 31, 31);
   justify-content: space-evenly;
 }
 
 .gender-inp {
   flex-direction: column;
-
+  color: aliceblue;
   align-items: center;
 
 }
@@ -54,21 +52,26 @@ h1 {
 
 .range-box {
   text-align: center;
+  color: aliceblue;
 }
+
+
 
 .range-nums {
   display: flex;
   align-items: center;
   gap: 10px;
   width: 400px;
+  color: aliceblue;
 
 }
 
 input[type=range] {
   height: 25px;
-  -webkit-appearance: none;
+  /* -webkit-appearance: none; */
   margin: 10px 0;
   width: 100%;
+
 }
 
 input[type=range]:focus {
@@ -79,47 +82,45 @@ input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 5px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
-  background: #2497E3;
+  background: #fe3c72;
   border-radius: 1px;
   border: 0px solid #000000;
 }
 
 input[type=range]::-webkit-slider-thumb {
   box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
+  border: 1px solid #fe3c72;
   height: 18px;
   width: 18px;
   border-radius: 25px;
-  background: #A1D0FF;
+  background: #fe3c72;
   cursor: pointer;
-  -webkit-appearance: none;
+
   margin-top: -7px;
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #2497E3;
+  background: #fe3c72;
 }
 
 input[type=range]::-moz-range-track {
   width: 100%;
   height: 5px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
-  background: #2497E3;
+  background: #fe3c72;
   border-radius: 1px;
   border: 0px solid #000000;
 }
 
 input[type=range]::-moz-range-thumb {
   box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
+  border: 1px solid #fe3c72;
   height: 18px;
   width: 18px;
   border-radius: 25px;
-  background: #A1D0FF;
+  background: #fe3c72;
   cursor: pointer;
 }
 
@@ -127,21 +128,21 @@ input[type=range]::-ms-track {
   width: 100%;
   height: 5px;
   cursor: pointer;
-  animate: 0.2s;
+
   background: transparent;
   border-color: transparent;
   color: transparent;
 }
 
 input[type=range]::-ms-fill-lower {
-  background: #2497E3;
+  background: #fe3c72;
   border: 0px solid #000000;
   border-radius: 2px;
   box-shadow: 0px 0px 0px #000000;
 }
 
 input[type=range]::-ms-fill-upper {
-  background: #2497E3;
+  background: #fe3c72;
   border: 0px solid #000000;
   border-radius: 2px;
   box-shadow: 0px 0px 0px #000000;
@@ -150,18 +151,29 @@ input[type=range]::-ms-fill-upper {
 input[type=range]::-ms-thumb {
   margin-top: 1px;
   box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
+  border: 1px solid #fe3c72;
   height: 18px;
   width: 18px;
   border-radius: 25px;
-  background: #A1D0FF;
+  background: #fe3c72;
   cursor: pointer;
 }
 
 input[type=range]:focus::-ms-fill-lower {
-  background: #2497E3;
+  background: #fe3c72;
 }
 
 input[type=range]:focus::-ms-fill-upper {
-  background: #2497E3;
+  background: #fe3c72;
+}
+
+.filter-btn {
+  padding: 10px;
+  color: aliceblue;
+  background-color: #fe3c72;
+}
+
+.filter-btn:hover {
+
+  background-color: #fc185c;
 }
