--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -2,15 +2,18 @@
   max-width: 500px;
   margin: 0 auto;
   padding: 20px;
-  background: #fafafa;
+  background: rgb(32, 31, 31);
   border: 1px solid #ccc;
-  margin-top: 50px;
+  margin-top: 150px;
+  box-shadow: 0px 10px 53px 0px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 
 
 .login h1 {
   margin: 0 0 20px 0;
   text-align: center;
+  color: aliceblue;
 }
 
 .login input {
@@ -26,12 +29,13 @@
   padding: 15px;
   padding-right: 50px;
   padding-left: 50px;
-  background: #bb1b1b;
+  background: #FD3A73;
   color: #fff;
+  cursor: pointer;
 }
 
 .login button:hover {
-  background-color: #e62e2e;
+  background-color: #fc185c;
 }
 
 .log-btn {
