--- a/src/css/SliderLikes.css
+++ b/src/css/SliderLikes.css
@@ -39,8 +39,8 @@
 }
 
 .slide {
-  /* opacity: 0; */
-  /* transition-duration: 0.1s ease; */
+  opacity: 0;
+  transition-duration: 0.1s ease;
 }
 
 .slide.active {
@@ -49,11 +49,20 @@
   /* transform: scale(1.08); */
 }
 
-.name {
+.names {
   position: absolute;
-
-  bottom: 8px;
-  /* right: 16px; */
+  bottom: 50px;
+  left: 16px;
   margin: 10px;
-  color: rgb(156, 45, 45);
+
+  color: #f7f7f7
+}
+
+.city {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+  margin: 10px;
+  color: #f7f7f7;
+
 }
