--- a/src/css/SwipeButton.css
+++ b/src/css/SwipeButton.css
@@ -1,7 +1,43 @@
-.swipeButton {
-  position: fixed;
-  bottom: 10vh;
+.swipeButtons {
+  /* position: fixed; */
+  /* bottom: 25vh; */
   display: flex;
-  justify-content: space-evenly;
-  width: 100%;
+  /* width: 100%; */
+  gap: 30px;
+  margin-left: 170px;
+  /* justify-content: space-evenly; */
+  margin-top: 630px;
+
+
+}
+
+.swipeButtons .MuiIconButton-root {
+  background-color: #fff;
+  box-shadow: 0px 10px 53px 0px rgba(0, 0, 0, 0.3) !important;
+}
+
+.swipeButtons__left {
+  padding: 2vh !important;
+  color: #f5b748 !important;
+}
+
+.swipeButtons__lightning {
+  padding: 2vh !important;
+  color: #ec5e6f !important;
+}
+
+.swipeButtons__star {
+  padding: 2vh !important;
+  color: #62b4f9 !important;
+}
+
+.swipeButtons__right {
+  padding: 2vh !important;
+  color: rgb(26, 218, 170) !important;
+
+}
+
+.swipeButtons__repeat {
+  padding: 2vh !important;
+  color: #915dd1 !important;
 }
