--- a/src/css/Cards.css
+++ b/src/css/Cards.css
@@ -35,3 +35,14 @@
   margin: 10px;
   color: #fff;
 }
+
+.slide {
+  opacity: 0;
+  transition-duration: 0.1s ease;
+}
+
+.slide.active {
+  opacity: 1;
+  transition-duration: 0.1s;
+  /* transform: scale(1.08); */
+}
