--- a/src/css/LikedSliderCards.css
+++ b/src/css/LikedSliderCards.css
@@ -6,9 +6,9 @@
   align-items: center;
 }
 
-.image {
-  width: 500px;
-  height: 500px;
+.images {
+  width: 150px;
+  height: 150px;
   border-radius: 20px;
   background-size: cover;
   background-position: center;
@@ -16,24 +16,43 @@
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.034);
 }
 
-.right-arrow {
+.right-arrow-like {
   position: absolute;
   top: 50%;
-  right: 10px;
-  font-size: 3rem;
+  right: 0;
+  font-size: 2.5rem;
   color: #000;
   z-index: 10;
   cursor: pointer;
   user-select: none;
 }
 
-.left-arrow {
+.left-arrow-like {
   position: absolute;
   top: 50%;
-  left: 10px;
-  font-size: 3rem;
+  left: 0;
+  font-size: 2.5rem;
   color: #000;
   z-index: 10;
   cursor: pointer;
   user-select: none;
+}
+
+.names-liked {
+  position: absolute;
+
+  bottom: 8px;
+  color: aliceblue;
+  margin: 10px;
+}
+
+.slide {
+  opacity: 0;
+  transition-duration: 0.1s ease;
+}
+
+.slide.active {
+  opacity: 1;
+  transition-duration: 0.1s;
+  /* transform: scale(1.08); */
 }
